css/webflow.css
/* ... */
@media screen and (max-width: 767px) {
    .heading-jumbo-small {
        font-size: 30px;
        line-height: 52px;
    }

    .rich-text {
        width: 90%;
        max-width: 470px;
        text-align: left;
    }

    .container {
        text-align: center;
    }

    .heading-jumbo {
        font-size: 50px;
        line-height: 64px;
    }

    .section {
        margin-right: 15px;
        margin-left: 15px;
    }

    .section.cc-contact {
        padding: 15px;
    }

    .paragraph-bigger {
        font-size: 16px;
        line-height: 28px;
    }

    .logo-link {
        padding-left: 0;
    }

    .navigation {
        padding: 20px 30px;
    }

    .work-experience-grid {
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-box-align: center;
        -webkit-align-items: center;
        -ms-flex-align: center;
        align-items: center;
    }

    .work-position-wrap {
        margin-bottom: 40px;
    }

    .project-name-link {
        font-size: 16px;
        line-height: 28px;
    }

    .text-field.cc-textarea {
        text-align: left;
    }

    .contact {
        padding-right: 30px;
        padding-left: 30px;
    }

    .contact-form-grid {
        grid-column-gap: 30px;
        grid-template-areas: "."
      "."
      ".";
        -ms-grid-columns: 1fr;
        grid-template-columns: 1fr;
        -ms-grid-rows: auto auto auto;
        grid-template-rows: auto auto auto;
    }

    .contact-form {
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
    }

    .contact-form-wrap {
        text-align: left;
    }

    .footer-wrap {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
        text-align: center;
    }

    .webflow-link {
        margin-bottom: 15px;
    }

    .footer-links {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
    }

    .footer-item {
        margin-top: 10px;
        margin-bottom: 10px;
        margin-left: 0;
    }

    .about-head-text-wrap {
        width: 70%;
        max-width: 470px;
    }

    .skills-grid {
        width: 70%;
        max-width: 470px;
        -ms-grid-columns: 1fr;
        grid-template-columns: 1fr;
    }

    .personal-features-grid {
        width: 70%;
        max-width: 470px;
    }

    .social-media-heading {
        width: 70%;
        max-width: 470px;
    }

    .social-media-grid {
        grid-column-gap: 15px;
        grid-row-gap: 15px;
        -ms-grid-columns: 1fr 1fr;
        grid-template-columns: 1fr 1fr;
    }

    .project-overview-grid {
        width: 80%;
        max-width: 470px;
        margin-top: 90px;
        margin-bottom: 95px;
    }

    .project-description-grid {
        width: 70%;
        max-width: 470px;
        margin-top: 90px;
        margin-bottom: 85px;
    }

    .detail-image {
        margin-bottom: 15px;
    }

    .email-section {
        width: 80%;
        max-width: 470px;
        margin-top: 120px;
        margin-bottom: 120px;
    }

    .email-link {
        font-size: 36px;
        line-height: 54px;
    }

    .utility-page-wrap {
        padding: 15px;
    }

    ._404-wrap {
        padding: 30px;
    }

    .cards-section {
        padding: 40px 20px;
    }

    .cards-grid-container {
        max-width: none;
        -ms-grid-row-align: stretch;
        align-self: stretch;
        -ms-grid-columns: 1fr;
        grid-template-columns: 1fr;
        -ms-grid-rows: auto auto auto;
        grid-template-rows: auto auto auto;
    }
}
/* ... */

